--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!-- Safari Pinned Tab (optionnel, nécessite un SVG) -->
 <link color="#5bbad5" href="/favicons/safari-pinned-tab.svg" rel="mask-icon"/>
 <!-- Manifest PWA -->
-<link href="/favicons/site.webmanifest.json" rel="manifest"/>
+<link rel="manifest" href="./favicons/site.webmanifest.json">
 <!-- Couleurs pour l'intégration mobile -->
 <meta content="#000000" name="theme-color"/>
 <meta content="#ffffff" name="background-color"/>
@@ -359,6 +359,7 @@
 			});
 </script></body>
 </html>
+
 
 
 
