--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="./favicons/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png"/>
 <link href="./favicons/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png"/>
 <!-- Icône pour iOS / iPadOS -->
-<link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon-180x180.png">
+<link rel="apple-touch-icon" href="./favicons/apple-touch-icon-180x180.png">
 <link href="/apple-touch-icon.png" rel="apple-touch-icon"/>
 <!-- Icônes Android / Chrome -->
 <link href="./favicons/android-chrome-192x192.png" rel="icon" sizes="192x192" type="image/png"/>
@@ -359,6 +359,7 @@
 			});
 </script></body>
 </html>
+
 
 
 
