--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <!-- Favicon standard pour navigateurs -->
 <link href="favicons/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png"/>
 <link href="favicons/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png"/>
-Icône pour iOS / iPadOS
+<!-- Icône pour iOS / iPadOS -->
 <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png">
 <link href="apple-touch-icon.png" rel="apple-touch-icon"/>
-Icônes Android / Chrome
+<!-- Icônes Android / Chrome -->
 <link href="favicons/android-chrome-192x192.png" rel="icon" sizes="192x192" type="image/png"/>
 <link href="favicons/android-chrome-512x512.png" rel="icon" sizes="512x512" type="image/png"/> -->
 <!-- Safari Pinned Tab (optionnel, nécessite un SVG) -->
@@ -376,6 +376,7 @@ document.getElementById("videoModal").addEventListener("click", (e) => {
 });
 </script></body>
 </html>
+
 
 
 
