--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link href="apple-touch-icon.png" rel="apple-touch-icon"/>
 <!-- Icônes Android / Chrome -->
 <link href="favicons/android-chrome-192x192.png" rel="icon" sizes="192x192" type="image/png"/>
-<link href="favicons/android-chrome-512x512.png" rel="icon" sizes="512x512" type="image/png"/> -->
+<link href="favicons/android-chrome-512x512.png" rel="icon" sizes="512x512" type="image/png"/>
 <!-- Safari Pinned Tab (optionnel, nécessite un SVG) -->
 <link color="#5bbad5" href="favicons/safari-pinned-tab.svg" rel="mask-icon"/>
 <!-- Manifest PWA -->
@@ -376,6 +376,7 @@ document.getElementById("videoModal").addEventListener("click", (e) => {
 });
 </script></body>
 </html>
+
 
 
 
