--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 <link href="favicons/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png"/>
 <link href="favicons/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png"/>
 <!-- Icône pour iOS / iPadOS -->
-<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+<!-- Pour Safari et autres navigateurs -->
+<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32" type="image/png">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
+<!-- Pour iOS écran d’accueil 
+<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png"> -->
+
 <!-- Icônes Android / Chrome -->
 <link href="favicons/android-chrome-192x192.png" rel="icon" sizes="192x192" type="image/png"/>
 <link href="favicons/android-chrome-512x512.png" rel="icon" sizes="512x512" type="image/png"/>
@@ -375,6 +382,7 @@ document.getElementById("videoModal").addEventListener("click", (e) => {
 });
 </script></body>
 </html>
+
 
 
 
