--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
 <!-- Pour Safari et autres navigateurs -->
 <link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-<link rel="shortcut icon" href="./favicon.ico?v=1" type="image/x-icon">
+<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.png" type="image/png">
 
 <!-- Pour iOS écran d’accueil 
 <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png"> -->
@@ -382,6 +383,7 @@ document.getElementById("videoModal").addEventListener("click", (e) => {
 });
 </script></body>
 </html>
+
 
 
 
