--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32" type="image/png">
 <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 <link rel="icon" href="favicon.png" type="image/png">
+<link rel="icon" sizes="16x16 32x32 64x64 128x128" href="favicon-32x32.png" type="image/png">
 
 <!-- Pour iOS écran d’accueil 
 <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png"> -->
@@ -383,6 +384,7 @@ document.getElementById("videoModal").addEventListener("click", (e) => {
 });
 </script></body>
 </html>
+
 
 
 
