--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     			},
     			"Déconseillé aux jeunes enfants": {
         			description: "Le film peut être vu par des personnes de tout âge.\n  Des passages peuvent perturber les enfants de moins de 8 ans.",
-        			color: "#E0F0FF"
+        			color: "#E3FBD9"
     			}
 			};
 	
@@ -407,6 +407,7 @@ document.getElementById("videoModal").addEventListener("click", (e) => {
 });
 </script></body>
 </html>
+
 
 
 
