--- a/index.html
+++ b/index.html
@@ -57,23 +57,23 @@
 			const ratingDetails = {
     			"13+": {
         			description: "12 ans - | DOIT ÊTRE ACCOMPAGNÉ PAR UN ADULTE",
-        			color: "#FFFACD"
+        			color: "#FFFDF0" // jaune très très pâle
     			},
     			"16+": {
         			description: "Le film peut être vu uniquement par des personnes de 16 ans ou plus",
-        			color: "#D6ECFF"
+        			color: "#EEF7FF" // bleu très très pâle
     			},
     			"18+": {
         			description: "Le film peut être vu uniquement par des personnes de 18 ans ou plus",
-        			color: "#FFD6D6"
+        			color: "#FFECEC" // rouge très très pâle
     			},
     			"Pour Enfants": {
         			description: "Le film convient aux jeunes enfants, particulièrement à ceux d’âge préscolaire.",
-        			color: "#E3FBD9"
+        			color: "#F4FFF0" // vert très très pâle
     			},
     			"Déconseillé aux jeunes enfants": {
         			description: "Le film peut être vu par des personnes de tout âge.\n  Des passages peuvent perturber les enfants de moins de 8 ans.",
-        			color: "#E3FBD9"
+        			color: "#F4FFF0" // même vert très très pâle
     			}
 			};
 	
@@ -407,6 +407,7 @@ document.getElementById("videoModal").addEventListener("click", (e) => {
 });
 </script></body>
 </html>
+
 
 
 
