--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			const motsCles = ["Déconseillé aux jeunes enfants", "Erostisme", "Exempte de classement", "Violence", "Horreur", "Langage Vulgaire", "Pour Enfants", "Sexualité Explicite"];
 			const ratingDetails = {
     			"13+": {
-        			description: "12 ans - | DOIT ÊTRE ACCOMPAGNÉ PAR UN ADULTE",
+        			description: "12 ans et moins doit être accompagné par un adulte",
         			color: "#FFFDF0" // jaune très très pâle
     			},
     			"16+": {
@@ -407,6 +407,7 @@ document.getElementById("videoModal").addEventListener("click", (e) => {
 });
 </script></body>
 </html>
+
 
 
 
