--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			const ratingDetails = {
     			"13+": {
         			description: "12 ans et moins doit être accompagné par un adulte",
-        			color: "#FFF5B0" // jaune très très pâle
+        			color: "#FFFBE0" // jaune très très pâle
     			},
     			"16+": {
         			description: "Le film peut être vu uniquement par des personnes de 16 ans ou plus",
@@ -407,6 +407,7 @@ document.getElementById("videoModal").addEventListener("click", (e) => {
 });
 </script></body>
 </html>
+
 
 
 
