--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
 <link href="favicons/android-chrome-512x512.png" rel="icon" sizes="512x512" type="image/png"/>
 <!-- Safari Pinned Tab (optionnel, nécessite un SVG) -->
 <link color="#5bbad5" href="favicons/safari-pinned-tab.svg" rel="mask-icon"/>
+<!-- Favicon standard -->
+/favicon.png
+/favicon.ico
+
+<!-- Pour iOS écran d'accueil -->
+/apple-touch-icon.png
+
 <!-- Manifest PWA -->
 <link rel="manifest" href="favicons/site.webmanifest.json">
 <!-- Couleurs pour l'intégration mobile -->
@@ -407,6 +414,7 @@ document.getElementById("videoModal").addEventListener("click", (e) => {
 });
 </script></body>
 </html>
+
 
 
 
