--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
   							10
 						);
 
-						// console.log(`Heure actuelle à Toronto: ${currentHour}:${currentMinute}`);
+						console.log(`Heure actuelle à Toronto: ${currentHour}:${currentMinute}`);
 
 						const seancesParDate = {};
 
@@ -405,6 +405,7 @@ document.getElementById("videoModal").addEventListener("click", (e) => {
 });
 </script></body>
 </html>
+
 
 
 
